# dwrs

./: Cargo.toml  README.md  config.toml  flake.nix
.github/workflows/: ci.yml  release.yml  rust.yml
locale/: ru.yml
nix/: home-manager.nix  package.nix
src/: cli.rs  config.rs  download.rs  file_parser.rs  lib.rs  localization.rs  main.rs  notifications.rs  progress.rs  utils.rs
