[package]
name = "dwrs"
version = "0.2.1"
authors = ["vadim rofeds12345@gmail.com"]
edition = "2024"
description = "CLI tool for parallel file downloads with progress bar and i18n support"
license = "Apache-2.0"
repository = "https://github.com/Bircoder432/dwrs"
readme = "README.md"
keywords = ["download", "parallel", "cli", "progress", "i18n"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["target/", "*.deb", "*.rpm", "*.tar.gz", "tests/", ".github/"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"]}
colored = "3.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
httpmock = "0.8.2"
indicatif = "0.18.0"
lazy_static = "1.5.0"
log = "0.4.27"
notify-rust = "4.11.7"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls","blocking","json","stream"]}
rust-i18n = "3.1.5"
tokio = { version = "1.46.1", features = ["full"]}


[[bin]]
name = "dwrs"
path = "src/main.rs"
[lib]
name = "dwrs"
path = "src/lib.rs"

[package.metadata.deb]
maintainer = "vadim rofeds12345@gmail.com"
depends = "libc6 (>= 2.28)"
section = "utils"
priority = "optional"
assets = [
    ["target/release/dwrs", "/usr/bin/","755"]
]
