[package]
name = "dwrs"
version = "0.2.3"
authors = ["vadim rofeds12345@gmail.com"]
edition = "2024"
description = "CLI tool for parallel file downloads with progress bar and i18n support"
license = "Apache-2.0"
repository = "https://github.com/Bircoder432/dwrs"
readme = "README.md"
keywords = ["download", "parallel", "cli", "progress", "i18n"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["target/", "*.deb", "*.rpm", "*.tar.gz", "tests/", ".github/"]

[features]
default = ["notify"]
notify = ["notify-rust"]

[dev-dependencies]
httpmock = "0.8.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.41", features = ["derive"]}
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
indicatif = "0.18.0"
lazy_static = "1.5.0"
log = "0.4.27"
notify-rust = { version = "4.11.7", optional = true }
once_cell = "1.21.3"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls","blocking","json","stream"]}
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"]}
toml = "0.9.10"


[[bin]]
name = "dwrs"
path = "src/main.rs"
[lib]
name = "dwrs"
path = "src/lib.rs"

[package.metadata.deb]
maintainer = "vadim rofeds12345@gmail.com"
depends = "libc6 (>= 2.28)"
section = "utils"
priority = "optional"
assets = [
    ["target/release/dwrs", "/usr/bin/","755"]
]
